--- a/auctions/templates/auctions/listing.html
+++ b/auctions/templates/auctions/listing.html
@@ -1,32 +1,36 @@
 {% extends "auctions/layout.html" %}
 
 {% block main %}
-<h2>Active Listings</h2>
-
-<!-- BEGIN UI BUTTON -->
 {% if user.is_authenticated %}
 <form method="POST" style="display: inline;">
     {% csrf_token %}
+    
     {% if user == listing.listing_user %}
         <input type="submit" name="edit" value="Edit">
         <input type="submit" name="delete" value="Delete">
     {% else %}
         <input type="submit" name="bid" value="Bid!">
+    {% if watchlist %}    
+    <input type="submit" name="remove_watchlist" value="Remove From Watchlist">
+    <span class="w3-badge w3-grey">Watchlisted!</span>
+    {% else %}
         <input type="submit" name="watchlist" value="Watchlist">
+    {% endif %}
+        
     {% endif %}
 </form>
 {% else %}
     <h5>Log in or register to bid on this item</h5>
 {% endif %}
-<!-- END UI BUTTONS -->
 
 <article>   
     <h3 >{{ listing.title }}</h3>
-    <h5 >Price: {{ listing.price }}</h5>
-    <img src="{{ listing.image.url }}" />   
+    <h5 >Price: {{ listing.price }}</h5>       
     <hr>
-    <h4>User's Description:</h4>
+    <h4>Owner's Description:</h4>
     {{ listing.description }}
+    <hr>
+    <img src="{{ listing.image.url }}" />
 </article>
 
 
