Listing Comments added

--- a/auctions/templates/auctions/index.html
+++ b/auctions/templates/auctions/index.html
@@ -4,8 +4,12 @@
 <h2>Active Listings</h2>
 
 <article>
+    {% if listings %}
     {% for listing in listings %}
         <section>{{ listing }} <a class="w3-button view-listing"  href="{% url 'listing' listing.id %}">View Listing</a></section>
     {% endfor %}
+    {% else %}
+        There are currenlty no active listings to show
+    {% endif %}
 </article>
 {% endblock %}
