--- a/auctions/templates/auctions/listing.html
+++ b/auctions/templates/auctions/listing.html
@@ -5,9 +5,12 @@
 <form method="POST" style="display: inline;">
     {% csrf_token %}
     
-    {% if user == listing.listing_user %}
-        <input type="submit" name="edit" value="Edit">
-        <input type="submit" name="delete" value="Delete">    
+    {% if user == listing.listing_user and not listing.closed%}
+        Would you like to 
+        <input type="submit" name="edit" value="Edit"> or 
+        <input type="submit" name="delete" value="Delete"> your listing?    
+    {% elif listing.closed %}
+        This listing is closed, would you like to <input type="submit" name="delete" value="Delete"> your listing?
     {% else %}        
         {% if watchlist %}    
         <input type="submit" name="remove_watchlist" value="Remove From Watchlist">
@@ -29,9 +32,21 @@
         <form method="POST" class="price-bid" style="display:inline;">
             {% csrf_token %}
             <h5 >Price: {{ listing.price }}</h5> 
-            {% if user != listing.listing_user %}
+            {% if user != listing.listing_user and user.is_authenticated %}
+                {% if listing.highest_bidder == user and not listing.closed %}
+                    You are the highest bidder!
+                {% elif listing.highest_bidder == user and listing.closed %}
+                    You won this auction!
+                {% else %}
                 Bid amount: <input type="number" name="bid_amount" min="{{ listing.price|add:'1' }}" value="{{ listing.price|add:'5' }}" >
-                <input type="submit" name="submit_bid" value="Place Bid!">
+                <input type="submit" name="make_bid" value="Place Bid!">
+                {% endif %}
+            {% else %}
+                {% if not listing.closed %}
+                <input type="submit" name="close_auction" value="Close Auction!">
+                {% elif listing.closed and listing.highest_bidder %}
+                    Congrats! <strong>{{listing.highest_bidder}}</strong> has won this auction.
+                {% endif %}
             {% endif %}
         </form>
     </section>
@@ -41,9 +56,11 @@
         <h4>Owner's Description:</h4>
         {{ listing.description }}
     </section>
-    <section>        
-        <img src="{{ listing.image.url }}" />
-    </section>
+    {% if listing.image.url != '/media/images/False' %}   
+        <section> 
+            <img src="{{ listing.image.url }}" />
+        </section>
+    {% endif %}
 
     <!-- BEGIN COMMENT FORM -->
     <section>
@@ -51,7 +68,7 @@
         {% if user.is_authenticated %}
             <form method="POST">
                 {% csrf_token %}
-                {{ comment_form }}
+                {{ comment_form }}<br>
                 <input type="submit" name="make_comment" value="Make comment">
             </form>
             {% else %}
@@ -65,6 +82,7 @@
                         {{ comment.comment_user.username }} said:<br>
                         "{{ comment.comment }}"
                         {% if user == comment.comment_user %}
+                        <br>
                         <input type="hidden" name="comment_id" value="{{ comment.id }}">
                         <input type="submit" name="delete_comment" value="Delete Comment">
                             
@@ -74,13 +92,7 @@
             {% endfor %}
         {% else %}
             <section>No one has commented on this listing yet, be the first!</section>
-        {% endif %}
-                
+        {% endif %}                
     </section>
-
 </article>
-
-
-
-
 {% endblock %}
