--- a/auctions/templates/auctions/listing.html
+++ b/auctions/templates/auctions/listing.html
@@ -58,7 +58,7 @@
     </section>
     {% if listing.image.url != '/media/images/False' %}   
         <section> 
-            <img src="{{ listing.image.url }}" />
+            <img src="{{ listing.image.url }}" style="width: 400px;"/>
         </section>
     {% endif %}
 
