--- a/auctions/templates/auctions/layout.html
+++ b/auctions/templates/auctions/layout.html
@@ -9,13 +9,31 @@
         <link rel="stylesheet" href="https://cdn.simplecss.org/simple.css">
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
         <link rel="stylesheet" href="{% static 'auctions/uaa490styles.css' %}" >
+   <script>
+document.addEventListener('DOMContentLoaded', function() {
+update_stats();
+setInterval(update_stats, 2000);
+});
+
+function update_stats() {  
+    fetch("/api/status")
+    .then(response => response.json())
+    .then(data => {
+        document.querySelector('#al').innerHTML = data['total_listings']
+    });
+}
+
+
+   </script>
+   
+   
     </head>
     <body>
         <header>
             <h1>Auctions "R" Us</h1>
             <nav>
                 <span>
-                    <a href="{% url 'index' %}">Active Listings</a>
+                    <a href="{% url 'index' %}">Active Listings <span id='al'></span></a>
                     <a href="{% url 'categories' 'All' %}">Categories</a>
                     <a href="{% url 'watchlist' %}">Watchlist</a>
                     <a href="{% url 'create_listing' %}">Create Listing</a>                   
