--- a/auctions/templates/auctions/listing.html
+++ b/auctions/templates/auctions/listing.html
@@ -62,10 +62,9 @@
         </section>
         {% if listing.image.url != '/media/images/False' %}   
             <section> 
-                <a href="{{ listing.image.url }}" data-lightbox="image-1" data-title="{{ listing.title }}"> <img src="{{ listing.image.url }}" style="width: 400px;"/></a>
-                <!--
-                <img src="{{ listing.image.url }}" style="width: 400px;"/>
-                -->
+                <a href="{{ listing.image.url }}" data-lightbox="image-1" data-title="Caption"> 
+                    <img src="{{ listing.image.url }}" style="width: 400px;"/>
+                </a>
             </section>
         {% endif %}
 
