--- a/auctions/templates/auctions/index.html
+++ b/auctions/templates/auctions/index.html
@@ -8,10 +8,14 @@
     {% for listing in listings %}
         <section>
             {{ listing }} 
-            <img class="watch index-watch"  id="watch" src="https://cdn-icons-png.flaticon.com/512/1077/1077035.png" onclick="watchlist()">
-            <div class="view-listing">                
-                <a class="w3-button listing-button"  href="{% url 'listing' listing.id %}">View Listing</a>
-            </div>           
+            {% if user.is_authenticated and listing.listing_user != user %}
+                {% if listing in watchlist %}
+                    <img class="watch" style="width:20px" id="watch" src="https://cdn-icons-png.flaticon.com/512/2077/2077502.png" onclick="watchlist('{{ listing.id }}')">
+                {% else %}
+                    <img class="watch" style="width:20px" id="watch" src="https://cdn-icons-png.flaticon.com/512/1077/1077035.png" onclick="watchlist('{{ listing.id }}')">
+                {% endif %}
+            {% endif %}
+            <a class="w3-button view-listing"  href="{% url 'listing' listing.id %}">View Listing</a>
         </section>
     {% endfor %}
     {% else %}
