--- a/auctions/templates/auctions/layout.html
+++ b/auctions/templates/auctions/layout.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="https://cdn.simplecss.org/simple.css">
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
         <link rel="stylesheet" href="{% static 'auctions/uaa490styles.css' %}" > 
-        <link href="../../../node_modules/lightbox2/dist/css/lightbox.css" rel="stylesheet" />    
+        <link href="../../node_modules/lightbox2/dist/css/lightbox.css" rel="stylesheet" />    
    </head>
     <body>
         <header>
