--- a/auctions/templates/auctions/watchlist.html
+++ b/auctions/templates/auctions/watchlist.html
@@ -8,13 +8,23 @@
     {% if listings %}
     <section>
         {% for listing in listings %}   
-        <section>{{ listing }} <a class="w3-button view-listing"  href="{% url 'listing' listing.id %}">View {{ listing.title }}</a></section>
+        <section>
+            {{ listing }} 
+            <img class="watch" style="width:20px" id="watch_{{listing.id}}" src="https://cdn-icons-png.flaticon.com/512/2077/2077502.png" onclick="watchlist('{{ listing.id }}')">
+            <a class="w3-button view-listing"  href="{% url 'listing' listing.id %}">View {{ listing.title }}</a>
+        </section>
         {% endfor %}
     </section>
     {% else %}
+        {% if user.is_authenticated %}
+            <section>
+                You aren't currently watching any auctions.    
+            </section>
+        {% else %}
         <section>
-            You aren't currently watching any auctions.    
+            You must be logged in to create a watchlist.    
         </section>
+        {% endif %}
     {% endif %}
     </article>
     {% endblock %}
