--- a/auctions/templates/auctions/listing.html
+++ b/auctions/templates/auctions/listing.html
@@ -105,5 +105,6 @@
                 <section>No one has commented on this listing yet, be the first!</section>
             {% endif %}                
         </section>
+        <!-- END COMMENT FORM -->
     </article>  
 {% endblock %}
