--- a/auctions/templates/auctions/index.html
+++ b/auctions/templates/auctions/index.html
@@ -10,9 +10,9 @@
             {{ listing }} 
             {% if user.is_authenticated and listing.listing_user != user %}
             {% if listing in watchlist %}
-                <img class="watch" style="width:20px" id="watch_{{listing.id}}" src="https://cdn-icons-png.flaticon.com/512/2077/2077502.png" onclick="watchlist('{{ listing.id }}')">
+                <img class="watch" style="width:20px" id="watch_{{listing.id}}" src="https://cdn-icons-png.flaticon.com/512/2077/2077502.png" onclick="toggle_watchlist('{{ listing.id }}')">
             {% else %}
-                <img class="watch" style="width:20px" id="watch_{{listing.id}}" src="https://cdn-icons-png.flaticon.com/512/1077/1077035.png" onclick="watchlist('{{ listing.id }}')">
+                <img class="watch" style="width:20px" id="watch_{{listing.id}}" src="https://cdn-icons-png.flaticon.com/512/1077/1077035.png" onclick="toggle_watchlist('{{ listing.id }}')">
             {% endif %}
             {% endif %}
             <a class="w3-button view-listing"  href="{% url 'listing' listing.id %}">View Listing</a>
