--- a/auctions/templates/auctions/layout.html
+++ b/auctions/templates/auctions/layout.html
@@ -18,7 +18,7 @@
                 <span>
                     <a href="{% url 'index' %}">Active Listings <span id='al'></span></a>
                     <a href="{% url 'categories' 'All' %}">Categories</a>
-                    <a href="{% url 'watchlist' %}">Watchlist</a>
+                    <a href="{% url 'watchlist' %}">Watchlist <span id='wl'></span></a>
                     <a href="{% url 'create_listing' %}">Create Listing</a>                   
                 </span>
                 <span>
