--- a/auctions/templates/auctions/watchlist.html
+++ b/auctions/templates/auctions/watchlist.html
@@ -15,7 +15,7 @@
                 
             {% else %}
                 {{ listing }}
-                <img class="watch" style="width:20px" id="watch_{{listing.id}}" src="https://cdn-icons-png.flaticon.com/512/2077/2077502.png" onclick="watchlist('{{ listing.id }}')">
+                <img class="watch" style="width:20px" id="watch_{{listing.id}}" src="https://cdn-icons-png.flaticon.com/512/2077/2077502.png" onclick="toggle_watchlist('{{ listing.id }}')">
                 <a class="w3-button view-listing"  href="{% url 'listing' listing.id %}">View {{ listing.title }}</a>
             {% endif %}
         </section>
